<resources>
    <string name="facebook_app_id">618163832425196</string>
 <string name="fb_login_protocol_scheme">fb618163832425196</string>
    <string name="server_client_id">12559647666-6bp4u9p23ok1rt1ikai6u6qm64ckiq2g.apps.googleusercontent.com</string>
    <string name="app_name">Idea Unica</string>
    <string name="img">Imagen</string>
    <string name="imgpublicidad">Publicidad</string>
    <string name="vencimientopuntos">Vencimiento</string>
    <string name="imgempresa">Logo</string>
    <string name="buscar">Buscar</string>
    <string name="departamento">Departamento</string>
    <string name="sucursales">Sucursales</string>
    <string name="descsucursales">Sucuarsales disponibles</string>
    <string name="galeria">Galeria</string>
    <string name="descripcion">Descripción</string>
    <string name="contacto">Contacto</string>
    <string name="contenido">Contenido:</string>
    <string name="departamentopuntos">Departamento:</string>
    <string name="costopuntos">Costo(Bs):</string>
    <string name="fechapuntos">Fecha:</string>
    <string name="informacion">Información:</string>
    <string name="instructor">Instructor/a:</string>
    <string name="horariopuntos">Horario/s:</string>
    <string name="direccionpuntos">Dirección:</string>
    <string name="eventos">Eventos</string>
    <string name="revista">Revista</string>
    <string name="entrevistas">Entrevistas</string>
    <string name="contactanos">Contáctanos</string>
    <string name="desccontactanos">Para mas informacion.</string>
    <string name="descentrevistas">Los mejores profesionales nacionales e internacionales.</string>
    <string name="descrevista">Fiestas sociales.</string>
    <string name="desceventos">Próximos eventos.</string>
    <string name="totalpuntos">Total: </string>
    <string name="apagar">A Pagar</string>
    <string name="pago">Pago</string>
    <string name="vencido">Vencido</string>
    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>
    <string name="confirmar">Confirmar</string>
    <string name="contactopuntos">Contacto:</string>
    <string name="acompañantepuntos">Acompañante/s:</string>
    <string name="adultospuntos">Adulto/s:</string>
    <string name="ninopuntos">Niño/s:</string>
    <string name="celular">Celular</string>
    <string name="guardar">Guadar</string>
    <string name="tipopuntos">Tipo:</string>
    <string name="nuevoinvitado">Nuevo Invitado</string>
    <string name="ejemplocelular">Ej. 75010136</string>
    <string name="ejemploemail">Ej. alguien@gmail.com</string>
    <string name="ejemploasunto">Describir el asunto</string>
    <string name="ejemplodescribirasunto">Describir el asunto</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="asunto">Asunto</string>
    <string name="email">Correo electrónico</string>
    <string name="telefono">Número de teléfono</string>
    <string name="hola">Hola!!!</string>
    <string name="descripcionhola">Entre en contacto con nosotros para dudas, sugerencias y publicidades. Llene los campos obligatorios y responderemos sus preguntas.</string>
    <string name="codigonumero">+591</string>
    <string name="por">Por: </string>
    <string name="redessociales">Redes Sociales</string>
    <string name="sice">SiCE SRL</string>
    <string name="from">from</string>
    <string name="leer">Leer más</string>
    <string name="ejemplofecha">Ej. 01/01/2020</string>
    <string name="ejemplocuaota">Ej. 1</string>
    <string name="titulopuntos">Título:</string>
    <string name="titulo">Título</string>
    <string name="ejemplotitulogasto">Ej. Gastos en el pastel</string>
    <string name="proveedorpuntos">Proveedor:</string>
    <string name="ejemploproveedor">Ej. Idea unica</string>
    <string name="valorgasto">Valor(Total):</string>
    <string name="ejemplovalorgasto">Ej. 100.0</string>
    <string name="formadepagopuntos">Forma de pago:</string>
    <string name="ejemplocomentariogasto">Ej. Para ...</string>
    <string name="cuotaspuntos">Cuotas:</string>
    <string name="comentariopuntos">Comentario:</string>
    <string name="pagopregunta">¿Pagó?</string>
    <string name="nombre">Nombre</string>
    <string name="ingresarcontactopuntos">Ingrese un numero de contacto:</string>
    <string name="ninospuntos">Niño/s:</string>
    <string name="ingresarnombrepuntos">Ingrese el nombre</string>
    <string name="invitadosconfirmadopregunta">¿Invitado Confirmado?</string>
    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="hora">Hora</string>
    <string name="crearevento">Crear nuevo Evento</string>
    <string name="fechaprimeracuotapuntos">Fecha de pago de la primera cuota:</string>
    <string name="seleccionarfechapuntos">Seleccione una fecha:</string>
    <string name="seleccionarhoraeventopuntos">Seleccione la hora del evento:</string>
    <string name="descripcionfechacuota">Las demas cuotas seran programadas a diferencia de un mes de esta fecha, realizando una división dentre las cuotas y el pago total.</string>
    <string name="siguiente">NEXT</string>
    <string name="anterior">BACK</string>
    <string name="barra"> | </string>
    <string name="leerpost">Leer post</string>
    <string name="puntopost"> · </string>
    <string name="logoempresa">Logo de la empresa</string>
    <string name="descripcionfragmentevento">Agrega tus próximos eventos!!</string>
    <string name="mipresupuesto">Mi Presupuesto</string>
    <string name="gastos">Gastos</string>
    <string name="cerodecimal">00.0</string>
    <string name="saldo">Saldo</string>
    <string name="actual">Actual</string>
    <string name="finalsaldo">Final</string>
    <string name="acompañantes">Acompañante/s</string>
    <string name="desconfirmar">Desconfirmar</string>
    <string name="actualifacionejemplofechanota">Mar 25, 2019 - Ultima Actualización</string>
    <string name="tarea">Tarea</string>
    <string name="personajesdestacados">Personajes Destacados</string>
    <string name="ideaunicabolivia">Idea Unica-Bolivia</string>
    <string name="pordospuntos">Por:</string>
    <string name="autor">Autor</string>
    <string-array name="Spinner_tipo_evento">
        <item>Cumpleaños</item>
        <item>Celebración</item>
        <item>Reunión</item>
        <item>Otro</item>
    </string-array>
    <string-array name="Spinner_tipo_invitado">
        <item>Familiar</item>
        <item>Amigo</item>
        <item>Trabajo</item>
        <item>Otro</item>
    </string-array>
    <string-array name="Spinner_tipo_pago">
        <item>Al Contado</item>
        <item>En Cuotas</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="lorem_text">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. </string>
    <string name="lorem_text2">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.
    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.
    Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Logo</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="iniciar_sesi_n_con">Iniciar sesión con:</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="inicie_sesi_n_para_continuar">Inicie sesión para continuar</string>
    <string-array name="tarea_seis_meses">
        <item>Defina su presupuesto</item>
        <item>Cantidad de invitados</item>
        <item>Lugar del evento</item>
        <item>Fecha y hora</item>
        <item>Temática</item>
    </string-array>
    <string-array name="tarea_cinco_meses">
        <item>Elegir lugar del evento, si será al aire libre o lugar cerrado</item>
        <item>Fecha del evento</item>
        <item>Cantidad de invitados niños y adultos</item>
        <item>Temática</item>
        <item>Invitaciones (entregar una semana antes como máximo)</item>
        <item>Elegir show o juegos, de acuerdo a las edades del agasajado e invitados</item>
        <item>Premios Para el show</item>
        <item>Definir vestimenta del agasajado y la familia</item>
        <item>Definir la decoración con la decoradora a cargo</item>
        <item>Elegir diseño, sabores, rellenos, de torta y dulces (Utilizar nuestra calculadora digital)</item>
        <item>Diseño de canastas o dulceras (recuerda que en su interior deberá tener un mínimo de 12 dulces de acuerdo a tamaño)</item>
        <item>Diseño de piñata (relleno según tamaño, no introducir juguetes que lastimen a los niños al caer)</item>
        <item>Elegir mobiliario infantil y adulto</item>
        <item>Elegir vajilla, cristalería y mantelería</item>
        <item>Centros de mesa (tomar en cuenta la visibilidad de los invitados)</item>
        <item>Personalización de recuerdos (si fuera de su preferencia)</item>
        <item>Catering (Utilizar nuestra calculadora digital)</item>
        <item>Carritos de dulces</item>
        <item>Gaseosas, jugos, agua (Utilizar nuestra calculadora digital)</item>
        <item>Meseros (Cada 30 invitados – 1 mesero)</item>
        <item>Contar con asistentes en la cocina</item>
        <item>Contar con asistentes de limpieza constante en el salón o lugar del evento</item>
        <item>Contar con una coordinadora para cuidar los detalles de la mesa principal</item>
        <item>Elegir quien tomara las fotografías y video</item>
    </string-array>
    <string-array name="tarea_un_mes">
        <item>Revisar lista de proveedores</item>
        <item>Entrar en contacto con cada proveedor para revisar avances</item>
        <item>Realizar compras de detalles, como dulces premios de show, vela, desechables y todo lo que este en nuestra lista de necesidades</item>
    </string-array>
</resources>