<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gastos.EditarGasto">
    <LinearLayout
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:text="@string/titulopuntos"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/titulo_editar_gasto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:singleLine="true"
            android:background="@null"
            android:inputType="text"
            android:autofillHints="@string/ejemplotitulogasto"
            android:hint="@string/ejemplotitulogasto" />
        <View
            android:layout_marginVertical="5dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"/>
        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:text="@string/proveedorpuntos"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/proveedor_editar_gasto"
            android:layout_marginTop="10dp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="18sp"
            android:autofillHints="@string/ejemploproveedor"
            android:inputType="text"
            android:singleLine="true"
            android:hint="@string/ejemploproveedor" />
        <View
            android:layout_marginVertical="5dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"/>
        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:text="@string/valorgasto"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/dinero_editar_gasto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:autofillHints="@string/ejemplovalorgasto"
            android:hint="@string/ejemploproveedor"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:background="@null" />
        <View
            android:layout_marginVertical="5dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"/>
        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginVertical="10dp"
            android:text="@string/formadepagopuntos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/formadepago_editar_gasto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:singleLine="true"
            android:autofillHints="@string/formadepagopuntos"
            android:background="@null" />
        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:text="@string/cuotaspuntos"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/cuotas_editar_gasto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:hint="@string/ejemplocuaota"
            android:singleLine="true"
            android:background="@null" />
        <View
            android:layout_marginVertical="5dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"/>
        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:text="@string/fechapuntos"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/fecha_editar_gasto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:autofillHints="@string/ejemplofecha"
            android:hint="@string/ejemplofecha"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="date"
            android:background="@null" />
        <View
            android:layout_marginVertical="5dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"/>
        <TextView
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:text="@string/comentariopuntos"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/comentario_editar_gasto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:inputType="text"
            android:autofillHints="@string/ejemplocomentariogasto"
            android:hint="@string/ejemplocomentariogasto"
            android:maxLines="1"
            android:background="@null" />
        <View
            android:layout_marginVertical="5dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"/>
        <CheckBox
            android:id="@+id/confirmar_editar_gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/pagopregunta"
            android:layout_marginBottom="40dp"
            android:textSize="25sp" />
    </LinearLayout>
</ScrollView>