<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.invitados.NuevoInvitado">
    <LinearLayout
        android:paddingHorizontal="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/ingresarnombrepuntos"
            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:autofillHints="@string/nombre"
            android:inputType="textCapSentences"
            android:id="@+id/nombre_nuevo_invitado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
            android:hint="@string/nombre" />
        <View
            android:layout_marginTop="20dp"
            android:layout_marginVertical="10dp"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#4D4B4B"/>
        <TextView
            android:textSize="18sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/acompañantepuntos"
            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/adultospuntos"
                android:textColor="#000"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"/>
            <EditText
                android:autofillHints="@string/cero"
                android:id="@+id/adulto_nuevo_invitado"
                android:layout_marginVertical="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:layout_marginEnd="30dp"
                android:hint="@string/cero" />
        </LinearLayout>
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/ninospuntos"
                android:textColor="#000"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginVertical="10dp"/>
            <EditText
                android:autofillHints="@string/cero"
                android:id="@+id/ninyo_nuevo_invitado"
                android:layout_marginVertical="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:layout_marginEnd="30dp"
                android:hint="@string/cero" />
        </LinearLayout>
        <TextView
            android:textSize="18sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/ingresarcontactopuntos"
            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:autofillHints="@string/ejemplocelular"
            android:id="@+id/celular_nuevo_invitado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="9"
            android:digits="1234567890"
            android:singleLine="true"
            android:background="@null"
            android:hint="@string/celular" />
        <View
            android:layout_marginTop="20dp"
            android:layout_marginVertical="10dp"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#4D4B4B"/>
        <TextView
            android:textSize="18sp"
            android:textColor="#000"
            android:text="@string/tipopuntos"
            android:textStyle="bold"
            android:layout_marginVertical="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/tipo_nuevo_invitado"
            android:entries="@array/Spinner_tipo_invitado"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dialog"
            android:minHeight="50dp"
            android:textColor="#000000">
        </Spinner>
        <CheckBox
            android:id="@+id/confirmar_nuevo_invitado"
            android:text="@string/invitadosconfirmadopregunta"
            android:textSize="18sp"
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/guardar_nuevo_invitado"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/guardar"
            android:textSize="20sp"
            android:padding="10dp"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:textColor="@color/colorblanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>