<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gastos.NuevoGasto">
    <LinearLayout
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="15sp"
            android:layout_marginVertical="10dp"
            android:text="@string/titulopuntos"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:autofillHints="@string/titulo"
            android:inputType="textCapSentences"
            android:id="@+id/titulo_nuevo_gasto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:maxLines="1"
            android:maxLength="50"
            android:background="@null"
            android:hint="@string/titulo" />
        <View
            android:layout_marginTop="15dp"
            android:layout_marginVertical="10dp"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#4D4B4B"/>
        <TextView
            android:textSize="15sp"
            android:layout_marginVertical="10dp"
            android:text="@string/proveedorpuntos"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:autofillHints="@string/ejemploproveedor"
            android:inputType="textCapSentences"
            android:id="@+id/proveedor_nuevo_gasto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:background="@null"
            android:maxLines="1"
            android:maxLength="50"
            android:hint="@string/ejemploproveedor" />
        <View
            android:layout_marginTop="15dp"
            android:layout_marginVertical="10dp"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#4D4B4B"/>
        <TextView
            android:textSize="15sp"
            android:layout_marginVertical="10dp"
            android:text="@string/valorgasto"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:autofillHints="@string/cero"
            android:id="@+id/dinero_nuevo_gasto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:maxLines="1"
            android:maxLength="50"
            android:hint="@string/cero"
            android:inputType="numberDecimal"
            android:background="@null" />
        <View
            android:layout_marginTop="15dp"
            android:layout_marginVertical="10dp"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#4D4B4B"/>
        <TextView
            android:textSize="15sp"
            android:textColor="#000000"
            android:layout_marginVertical="10dp"
            android:text="@string/formadepagopuntos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/tipo_nuevo_gasto"
            android:entries="@array/Spinner_tipo_pago"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:spinnerMode="dialog"
            android:minHeight="50dp"
            android:textColor="#000000">
        </Spinner>
        <LinearLayout
            android:id="@+id/tipo_linear_nuevo_gasto"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_marginVertical="10dp"
                android:text="@string/cuotaspuntos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:autofillHints="@string/uno"
                android:id="@+id/cuotas_nuevo_gasto"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/uno"
                android:inputType="number"
                android:background="@null" />
            <View
                android:layout_marginTop="15dp"
                android:layout_marginVertical="10dp"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#4D4B4B"/>
            <TextView
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="@string/fechaprimeracuotapuntos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="12sp"
                android:layout_marginBottom="10dp"
                android:textColor="#000000"
                android:text="@string/descripcionfechacuota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:autofillHints="@string/ejemplofecha"
                android:id="@+id/fecha_nuevo_gasto"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/ejemplofecha"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:inputType="date"
                android:background="@null" />
            <View
                android:layout_marginTop="15dp"
                android:layout_marginVertical="10dp"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#4D4B4B"/>
        </LinearLayout>
        <TextView
            android:textSize="15sp"
            android:layout_marginVertical="10dp"
            android:text="@string/comentariopuntos"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/comentario_nuevo_gasto"
            android:padding="10dp"
            android:autofillHints="@string/ejemplodescribirasunto"
            android:hint="@string/ejemplodescribirasunto"
            android:background="@drawable/margen_gris"
            android:minLines="6"
            android:maxLines="15"
            android:maxLength="250"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:layout_marginBottom="50dp"/>
    </LinearLayout>
</ScrollView>