<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorblanco"
    tools:context=".SplashScreen">
    <ImageView
        android:contentDescription="@string/img"
        android:tint="@color/colorAccent"
        android:id="@+id/logo_splash"
        android:src="@drawable/logoevelin"
        android:layout_centerInParent="true"
        android:layout_width="100dp"
        android:layout_height="100dp"/>
    <TextView
        android:id="@+id/from_splash"
        android:text="@string/from"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/nombre_splash"
        android:textSize="16sp"
        android:textColor="#8A8989"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/nombre_splash"
        android:text="@string/sice"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>